@@ -12,11 +12,7 @@ class AdminMenuTestCase extends DrupalWebTestCase {
   }
 
   function setUp() {
-    parent::setUp();
-
-    $this->drupalModuleEnable('admin_menu');
-    $this->drupalModuleDisable('contact');
-    $this->drupalModuleDisable('devel');
+    parent::setUp('admin_menu');
   }
 
   /**
