@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-x.x, xxxx-xx-xx
 ------------------------------
+#280002 by pwolanin: Clean up .test setUp function.
 #242377 by sun: Fixed sub-level menu items exceed total document height.
 
 
